--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -88,6 +88,11 @@ article {
   flex-direction: column;
 }
 
+article > div {
+  border-left: solid 6px #3e3232;
+  padding-left: 0.8rem;
+}
+
 .grid > article {
   max-height: 80vh;
 }
