--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -140,3 +140,44 @@ article time {
 }
 
 /* 2xl @media (width >= 1536px) {} */
+
+article {
+  display: inline-flex;
+}
+
+img {
+  max-width: 100%;
+  max-height: 80vh;
+  width: auto;
+}
+
+article h2 {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.75rem;
+  font-size: 3em;
+  white-space: nowrap;
+}
+
+figure {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 1.5rem;
+}
+
+figcaption {
+  width: 100%;
+  margin-top: 1rem;
+  font-style: italic;
+  font-size: 1.25rem;
+}
+
+.line {
+  display: inline-block;
+  background-color: black;
+  margin-top: 3px; /* height / 2 */
+  margin: 3px 0.5rem 0 0.5rem;
+  width: 100%;
+  height: 6px;
+}
